feat:新增CGLIB代理实现(不可用)